<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="338dp"
        android:layout_height="598dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/cerrarSesion_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="cerrarSesion"
            android:text="@string/btn_cerrar_sesion"
            android:visibility="gone"
            app:backgroundTint="#299729" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/iniciarSesionPantalla"
                style="@android:style/Widget.DeviceDefault.Button.Inset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="irInciar"
                android:text="@string/btn_iniciar_pantalla"
                app:backgroundTint="@color/colorPrimary"
                tools:text="@string/btn_iniciar_pantalla" />

            <Button
                android:id="@+id/registrarPantalla"
                style="@android:style/Widget.DeviceDefault.Button.Inset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="irRegistrarse"
                android:text="@string/btn_registrar_pantalla"
                app:backgroundTint="@color/colorPrimary"
                tools:text="@string/btn_registrar_pantalla" />

        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/colorPrimaryDark"
                    app:cardCornerRadius="20dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/descripcion_introduccion" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/imageView"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                app:srcCompat="@drawable/inicio" />

                            <Button
                                android:id="@+id/introduccion"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:onClick="irIntroduccion"
                                android:text="@string/introduccion_btn"
                                app:backgroundTint="@color/colorAccent" />
                        </LinearLayout>


                    </LinearLayout>


                </androidx.cardview.widget.CardView>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/colorPrimaryDark"
                    app:cardCornerRadius="20dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView8"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/descripcion_registro_ideas" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/imageView8"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                app:srcCompat="@drawable/cerebro" />

                            <Button
                                android:id="@+id/registroideas"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:onClick="irRegistroIdeas"
                                android:text="@string/registro_ideas_btn"
                                app:backgroundTint="@color/colorAccent" />
                        </LinearLayout>


                    </LinearLayout>


                </androidx.cardview.widget.CardView>
            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/colorPrimaryDark"
                    app:cardCornerRadius="20dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/descripcion_noticias" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/imageView2"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                app:srcCompat="@drawable/periodico" />

                            <Button
                                android:id="@+id/noticias"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:onClick="irNoticias"
                                android:text="@string/noticias_btn"
                                app:backgroundTint="@color/colorAccent" />
                        </LinearLayout>


                    </LinearLayout>


                </androidx.cardview.widget.CardView>


            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/colorPrimaryDark"
                    app:cardCornerRadius="20dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/descripcion_tipos" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/imageView3"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                app:srcCompat="@drawable/tips" />

                            <Button
                                android:id="@+id/tipos"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:onClick="irTips"
                                android:text="@string/tipos_btn"
                                app:backgroundTint="@color/colorAccent" />
                        </LinearLayout>


                    </LinearLayout>


                </androidx.cardview.widget.CardView>


            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/colorPrimaryDark"
                    app:cardCornerRadius="20dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/descripcion_cursos" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/imageView4"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                app:srcCompat="@drawable/curos" />

                            <Button
                                android:id="@+id/cursos"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:onClick="irCursos"
                                android:text="@string/cursos_btn"
                                app:backgroundTint="@color/colorAccent" />
                        </LinearLayout>


                    </LinearLayout>


                </androidx.cardview.widget.CardView>


            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/colorPrimaryDark"
                    app:cardCornerRadius="20dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/descripcion_libros" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/imageView5"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                app:srcCompat="@drawable/libros" />

                            <Button
                                android:id="@+id/libros"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:onClick="irLibros"
                                android:text="@string/libros_btn"
                                app:backgroundTint="@color/colorAccent" />
                        </LinearLayout>


                    </LinearLayout>


                </androidx.cardview.widget.CardView>


            </TableRow>


        </TableLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>